--- a/bank.html
+++ b/bank.html
@@ -185,10 +185,10 @@
                 <div class="group-title"><span class="badge badge-success">Страхование/Кредит/Финансы</span></div>
                 <ul>
                   <li>
-                    <div class="icon alfabank ua"></div><a href="https://alfabank.ua/" target="_blank">alfabank.ua</a>
+                    <div class="icon alfabank ua"></div><a href="https://letyshops.com/r/alfa-bank-ukraina-6ad28531522e" target="_blank">alfabank.ua`</a>
                   </li>
                   <li>
-                    <div class="icon ideabank ua"></div><a href="https://letyshops.com/r/idea-bank-ua-4qh7st9ddx8go0" target="_blank">ideabank.ua`</a>
+                    <div class="icon ideabank ua"></div><a href="https://www.ideabank.ua/" target="_blank">ideabank.ua</a>
                   </li>
                   <li>
                     <div class="icon hotline finance"></div><a href="https://letyshops.com/r/hotline-4qh7st9ddxk40o" target="_blank">hotline.finance`</a>
