--- a/shops.html
+++ b/shops.html
@@ -80,9 +80,6 @@
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">30%дешевле</span>
                   </li>
                   <li>
-                    <div class="icon smarty sale"></div><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale`</a><span class="opisi">умные покупки</span>
-                  </li>
-                  <li>
                     <div class="icon payback ua"></div><a href="https://payback.ua/hMNbS" target="_blank">Payback.ua`</a><span class="opisi">Вам платят!</span>
                   </li>
                 </ul>
@@ -150,10 +147,10 @@
                     <div class="icon rozetka com ua"></div><a href="https://rozetka.com.ua/" target="_blank">rozetka.com.ua</a>
                   </li>
                   <li>
-                    <div class="icon allo ua"></div><a href="https://allo.ua" target="_blank">allo.ua</a>
+                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-3f4b6c4857e7" target="_blank">allo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon eldorado ua"></div><a href="https://letyshops.com/r/eldorado-ua-4qh7st9dcj28sk" target="_blank">eldorado.ua`</a>
+                    <div class="icon eldorado ua"></div><a href="https://eldorado.ua/uk/" target="_blank">eldorado.ua</a>
                   </li>
                   <li>
                     <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8" target="_blank">moyo.ua`</a>
@@ -183,6 +180,10 @@
                   </li>
                   <li>
                     <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o" target="_blank">xiaomi.ua`</a>
+                  </li>
+                  <li>
+                    <div class="icon repka ua"></div><a href="https://letyshops.com/r/repka-ua-7352c7232593" target="_blank">repka.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха" alt=""></div>
                   </li>
                   <li>
                     <div class="icon telemart ua"></div><a href="https://letyshops.com/r/telemart-ua-4qh7st9dcpickc" target="_blank">telemart.ua`</a>
@@ -224,7 +225,7 @@
                 <div class="group-title"><span class="badge badge-success">Запчасти, инструменты, приборы</span></div>
                 <ul>
                   <li>
-                    <div class="icon master-plus com ua"></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st9dcrgggk" target="_blank">master-plus.com.ua`</a>
+                    <div class="icon master-plus com ua"></div><a href="https://master-plus.com.ua/ua/" target="_blank">master-plus.com.ua</a>
                     <div class="icontooinfo a0repa3" title="ТМ Мастер-Плюс - Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники." alt=""></div>
                   </li>
                 </ul>
@@ -296,7 +297,7 @@
                     <div class="icontooinfo a0repa3" title="Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon prego ua"></div><a href="https://prego.ua" target="_blank">prego.ua</a>
+                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-7abce57c019e" target="_blank">prego.ua`</a>
                     <div class="icontooinfo a0repa3" title="Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
                   </li>
                   <li>
@@ -402,7 +403,7 @@
                     <div class="icon apteka911 com ua"></div><a href="https://apteka911.com.ua" target="_blank">apteka911.com.ua</a>
                   </li>
                   <li>
-                    <div class="icon apteka24 ua"></div><a href="https://www.apteka24.ua/" target="_blank">apteka24.ua</a>
+                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-71012859b26c" target="_blank">apteka24.ua`</a>
                   </li>
                   <li>
                     <div class="icon doc ua"></div><a href="https://letyshops.com/r/doc-ua-4qh7st9ddu04wo" target="_blank">doc.ua`</a>
@@ -440,7 +441,7 @@
                     <div class="icon yakaboo ua"></div><a href="https://www.yakaboo.ua/" target="_blank">yakaboo.ua</a>
                   </li>
                   <li>
-                    <div class="icon grenka ua"></div><a href="https://letyshops.com/r/grenka-ua-4qh7st9ddvacsw" target="_blank">grenka.ua`</a>
+                    <div class="icon grenka ua"></div><a href="https://grenka.ua/" target="_blank">grenka.ua</a>
                   </li>
                   <li>
                     <div class="icon bambook com"></div><a href="https://letyshops.com/r/bambook-ua-4qh7st9ddvk04k" target="_blank">bambook.com`</a>
@@ -472,7 +473,7 @@
                     <div class="icon rentalcars com"></div><a href="https://letyshops.com/r/rentalcars-4qh7st9ddwcgw8" target="_blank">rentalcars.com`</a>
                   </li>
                   <li>
-                    <div class="icon ihg com"></div><a href="https://letyshops.com/r/ihg-amea-4qh7st9depesk0" target="_blank">ihg.com`</a>
+                    <div class="icon ihg com"></div><a href="https://www.ihg.com/hotels/ru/ru/reservation" target="_blank">ihg.com</a>
                     <div class="icontooinfo a0repa3" title="Найдите и забронируйте номер в любом отеле сети брэндов IHG: InterContinental, Crowne Plaza, Hotel Indigo, Holiday Inn, Holiday Inn Express, Staybridge Suites и Candlewood Suites." alt=""></div>
                   </li>
                 </ul>
