--- a/index.html
+++ b/index.html
@@ -330,10 +330,16 @@
                     <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st9dcjok8o" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
-                    <div class="icon eldorado ua"></div><a href="https://letyshops.com/r/eldorado-ua-4qh7st9dcj28sk" target="_blank">eldorado.ua`</a>
+                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-4qh7st93i7408s" target="_blank">skidka.ua`</a>
                   </li>
                   <li>
                     <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8" target="_blank">moyo.ua`</a>
+                  </li>
+                  <li>
+                    <div class="icon f ua"></div><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-4qh7st9dcoowkk" target="_blank">f.ua`</a>
+                  </li>
+                  <li>
+                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-3f4b6c4857e7" target="_blank">allo.ua`</a>
                   </li>
                   <li>
                     <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o" target="_blank">xiaomi.ua`</a>
@@ -346,7 +352,7 @@
                     <div class="icontooinfo a0repa3" title="Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon apteka911 com ua"></div><a href="https://apteka911.com.ua" target="_blank">apteka911.com.ua</a>
+                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-71012859b26c" target="_blank">apteka24.ua`</a>
                   </li>
                 </ul>
               </div>
@@ -435,6 +441,10 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-05-30</span></a></div>
                 <ul>
                   <li>
+                    <div class="icon repka ua"></div><a href="https://letyshops.com/r/repka-ua-7352c7232593" target="_blank">repka.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
                     <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
@@ -476,12 +486,8 @@
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-4qh7st9ddpgkg4" target="_blank">prego.ua`</a>
+                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-7abce57c019e" target="_blank">prego.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon ager ua"></div><a href="https://letyshops.com/r/ager-ua-4qh7st9ddpq8ss" target="_blank">ager.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день." alt=""></div>
                   </li>
                   <li>
                     <div class="icon sneakerstudio com ua"></div><a href="https://letyshops.com/r/sneakerstudio-ua-4qh7st9ddq0ww8" target="_blank">sneakerstudio.com.ua`</a>
