--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="group-title"><a href="/games.html"><span class="badge badge-dark">Игры/Букмек.конторы</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon parimatch com"></div><a href="https://classic.parimatch.com/" target="_blank">classic.parimatch.com`</a>
+                    <div class="icon parimatch com"></div><a href="https://air.parimatch.com/ru/" target="_blank">air.parimatch.com`</a>
                   </li>
                   <li>
                     <div class="icon fan-sport com ua"></div><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua`</a>
