--- a/index.html
+++ b/index.html
@@ -438,8 +438,12 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-05-30</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-08-07</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb" target="_blank">Карта-колір COVID UA</a>
+                    <div class="icontooinfo a0repa3" title="Візуалізація епідемічних показників на рівні районів та міст обласного значення" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon repka ua"></div><a href="https://letyshops.com/r/repka-ua-7352c7232593" target="_blank">repka.ua`</a>
                     <div class="icontooinfo a0repa3" title="Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха" alt=""></div>
