--- a/communal.html
+++ b/communal.html
@@ -91,10 +91,10 @@
                     <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.газ</span>
                   </li>
                   <li>
-                    <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span>
+                    <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Каб.Газ.(!!!)</span>
                   </li>
                   <li>
-                    <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Кабинет.Газ.(старый)</span>
+                    <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Каб.Газ.(доставка)</span>
                   </li>
                   <li>
                     <div class="icon a104 ua"></div><a href="https://104.ua/ua/" target="_blank">104.ua</a><span class="opisi">Поиск компании</span>
@@ -159,7 +159,6 @@
                     <div class="icon my ukrtelecom ua"></div><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">КАБИНЕТ</span>
                   </li>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon my vega ua"></div><a href="https://my.vega.ua/" target="_blank">Vega Telecom</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a><a href="https://youtu.be/nsknyxq9alo" target="_blank">
