--- a/shops.html
+++ b/shops.html
@@ -175,7 +175,7 @@
                     <div class="icon comfy ua"></div><a href="https://comfy.ua" target="_blank">comfy.ua</a>
                   </li>
                   <li>
-                    <div class="icon citrus ua"></div><a href="https://letyshops.com/r/citrus-ua-4qh7st9dcosgcc" target="_blank">citrus.ua`</a>
+                    <div class="icon citrus ua"></div><a href="https://www.citrus.ua/" target="_blank">citrus.ua</a>
                     <div class="icontooinfo a0repa3" title="Интернет-магазин Цитрус — гаджеты и аксессуары" alt=""></div>
                   </li>
                   <li>
@@ -313,7 +313,7 @@
                     <div class="icontooinfo a0repa3" title="Чемоданы, галантерея, кожаные сумки по выгодной цене прямо от производителя. Широкий ассортимент дорожных сумок, кошельков, перчаток и мужских ремней в интернет-магазин Puccini" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon ombre ua"></div><a href="" target="_blank">ombre.ua`</a>
+                    <div class="icon ombre ua"></div><a href="https://ombre.ua/" target="_blank">ombre.ua</a>
                     <div class="icontooinfo a0repa3" title="OMBRE: одежда мужская онлайн. Интернет-магазин одежды" alt=""></div>
                   </li>
                   <li>
@@ -482,7 +482,7 @@
                 <div class="group-title"><span class="badge badge-success">Дом/Квартира/Комната</span></div>
                 <ul>
                   <li>
-                    <div class="icon ru airbnb com"></div><a href="https://letyshops.com/r/airbnb-4qh7st9ddwo48w" target="_blank">ru.airbnb.com`</a>
+                    <div class="icon ru airbnb com"></div><a href="https://ru.airbnb.com/host/homes" target="_blank">ru.airbnb.com`</a>
                     <div class="icontooinfo a0repa3" title="Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. " alt=""></div>
                   </li>
                 </ul>
