--- a/index.html
+++ b/index.html
@@ -223,10 +223,18 @@
                     <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span>
                   </li>
                   <li>
+                    <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Каб.Газ.(доставка)</span>
+                  </li>
+                  <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span>
                   </li>
                   <li>
                     <div class="icon kresc com ua"></div><a href="https://www.kresc.com.ua/" target="_blank">kresc.com.ua</a><span class="opisi">КОЕК</span><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
+                  </li>
+                  <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
+                    <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
@@ -240,7 +248,7 @@
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon skylink_vk"></div><a href="http://sky-link.com.ua/" target="_blank">sky-link.com.ua</a><span class="opisi">Sky-link</span>
+                    <div class="icon skylink_vk"></div><a href="http://sky-link.com.ua/" target="_blank">Sky-link</a>
                   </li>
                   <li>
                     <div class="icon kyivstar ua"></div><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a>
@@ -449,25 +457,16 @@
                     <div class="icontooinfo a0repa3" title="Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
-                    <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
-                  </li>
-                  <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0" target="_blank">Карта коронавируса UA</a>
                     <div class="icontooinfo a0repa3" title="Карта Украины с позначками где были зафиксированные случаи" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://experience.arcgis.com/experience/685d0ace521648f8a5beeeee1b9125cd" target="_blank">Карта коронавируса MIR</a>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://covid19.who.int/" target="_blank">Карта коронавируса MIR</a>
                     <div class="icontooinfo a0repa3" title="Вся статистика по коронавирусу, по всей земле" alt=""></div>
                   </li>
                   <li>
                     <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
                     <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="http://zakladki.at.ua/forum/24-9-1" target="_blank">Как платить за газ 2020</a>
-                    <div class="icontooinfo a0repa3" title="С января 2020 года украинцы начали получать платежки за газ, в которых теперь предусмотрена новая схема оплаты - отдельно за потребленный газ и абонплата за его транспортировку. " alt=""></div>
                   </li>
                   <li>
                     <div class="icon silvergames"></div><a href="https://www.silvergames.com/ru/" target="_blank">silvergames.com</a>
@@ -496,10 +495,6 @@
                   <li>
                     <div class="icon sneakerstudio com ua"></div><a href="https://letyshops.com/r/sneakerstudio-ua-4qh7st9ddq0ww8" target="_blank">sneakerstudio.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon exmo_com"></div><a href="https://exmo.com/?ref=1654818" target="_blank">exmo.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Надежная биткоин биржа и трейдинг платформа стран СНГ" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ZAKLADOK</a>
