--- a/shops.html
+++ b/shops.html
@@ -438,10 +438,10 @@
                 <div class="group-title"><span class="badge badge-success">Книги</span></div>
                 <ul>
                   <li>
-                    <div class="icon yakaboo ua"></div><a href="https://www.yakaboo.ua/" target="_blank">yakaboo.ua</a>
+                    <div class="icon yakaboo ua"></div><a href="https://letyshops.com/r/yakaboo-2ba5dc8a4c53" target="_blank">yakaboo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon grenka ua"></div><a href="https://grenka.ua/" target="_blank">grenka.ua</a>
+                    <div class="icon grenka ua"></div><a href="https://letyshops.com/r/grenka-ua-a5dec91a4eea" target="_blank">grenka.ua`</a>
                   </li>
                   <li>
                     <div class="icon bambook com"></div><a href="https://letyshops.com/r/bambook-ua-4qh7st9ddvk04k" target="_blank">bambook.com`</a>
