--- a/programs.html
+++ b/programs.html
@@ -122,6 +122,10 @@
                 <div class="group-title"><span class="badge badge-warning">Загрузить браузеры</span></div>
                 <ul>
                   <li>
+                    <div class="icon CryptoTab"></div><a href="https://cryptotabbrowser.com/17032365" target="_blank">CryptoTab`</a>
+                    <div class="icontooinfo a0repa3" title="Это браузер для работы и паралельного майнинга биткоинов. Вы в интернете, и Вам понемногу капает Bitcoin" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon prog_GoogleChrome"></div><a href="https://www.google.com/intl/ru_ALL/chrome/" target="_blank">Google Chrome</a>
                   </li>
                   <li>
