--- a/index.html
+++ b/index.html
@@ -440,8 +440,12 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-08-07</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-12-01</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon CryptoTab"></div><a href="https://cryptotabbrowser.com/17032365" target="_blank">CryptoTab`</a>
+                    <div class="icontooinfo a0repa3" title="Это браузер для работы и паралельного майнинга биткоинов. Вы в интернете, и Вам понемногу капает Bitcoin" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb" target="_blank">Карта-колір COVID UA</a>
                     <div class="icontooinfo a0repa3" title="Візуалізація епідемічних показників на рівні районів та міст обласного значення" alt=""></div>
