--- a/index.html
+++ b/index.html
@@ -381,6 +381,9 @@
                     <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
+                    <div class="icon rutor info"></div><a href="http://rutor.info/" target="_blank">rutor.info</a>
+                  </li>
+                  <li>
                     <div class="icon bible-teka com"></div><a href="https://bible-teka.com/synodal/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span>
                   </li>
                   <li>
