--- a/bank.html
+++ b/bank.html
@@ -185,16 +185,16 @@
                 <div class="group-title"><span class="badge badge-success">Страхование/Кредит/Финансы</span></div>
                 <ul>
                   <li>
-                    <div class="icon alfabank ua"></div><a href="https://letyshops.com/r/alfa-bank-ukraina-6ad28531522e" target="_blank">alfabank.ua`</a>
+                    <div class="icon alfabank ua"></div><a href="https://alfabank.ua/" target="_blank">alfabank.ua</a>
                   </li>
                   <li>
                     <div class="icon ideabank ua"></div><a href="https://www.ideabank.ua/" target="_blank">ideabank.ua</a>
                   </li>
                   <li>
-                    <div class="icon hotline finance"></div><a href="https://letyshops.com/r/hotline-4qh7st9ddxk40o" target="_blank">hotline.finance`</a>
+                    <div class="icon hotline finance"></div><a href="https://letyshops.com/r/hotline-17c808f3d8f4" target="_blank">hotline.finance`</a>
                   </li>
                   <li>
-                    <div class="icon vuso ua"></div><a href="https://letyshops.com/r/vuso-ua-4qh7st9ddxmosk" target="_blank">vuso.ua`</a>
+                    <div class="icon vuso ua"></div><a href="https://letyshops.com/r/vuso-ua-754fdba3399e" target="_blank">vuso.ua`</a>
                   </li>
                 </ul>
               </div>
