--- a/index.html
+++ b/index.html
@@ -326,38 +326,38 @@
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">Все дешевле</span>
                   </li>
                   <li>
-                    <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-4qh7st9dci04g0" target="_blank">best.aliexpress.com`</a>
+                    <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-ww-8e0f7c701af4" target="_blank">best.aliexpress.com`</a>
                   </li>
                   <li>
                     <div class="icon rozetka com ua"></div><a href="https://rozetka.com.ua/" target="_blank">rozetka.com.ua</a>
                   </li>
                   <li>
-                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st9dcjok8o" target="_blank">stylus.ua`</a>
+                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-19dd22ceba8e" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
-                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-4qh7st93i7408s" target="_blank">skidka.ua`</a>
+                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-d1993e48a6a0" target="_blank">skidka.ua`</a>
                   </li>
                   <li>
-                    <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8" target="_blank">moyo.ua`</a>
+                    <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-4c9901a4771b" target="_blank">moyo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon f ua"></div><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-4qh7st9dcoowkk" target="_blank">f.ua`</a>
+                    <div class="icon f ua"></div><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-260ad56e26ee" target="_blank">f.ua`</a>
                   </li>
                   <li>
-                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-3f4b6c4857e7" target="_blank">allo.ua`</a>
+                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-f78863faf441" target="_blank">allo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o" target="_blank">xiaomi.ua`</a>
+                    <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-f1f231622461" target="_blank">xiaomi.ua`</a>
                   </li>
                   <li>
-                    <div class="icon bonprix ua"></div><a href="https://letyshops.com/r/bonprix-ua-4qh7st9ddo6cs0" target="_blank">bonprix.ua`</a>
+                    <div class="icon intertop ua"></div><a href="https://letyshops.com/r/intertop-ua-cc02944317d1" target="_blank">intertop.ua`</a>
                   </li>
                   <li>
-                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st9ddu2oog" target="_blank">med-magazin.ua`</a>
+                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4ae19f26a235" target="_blank">med-magazin.ua`</a>
                     <div class="icontooinfo a0repa3" title="Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-71012859b26c" target="_blank">apteka24.ua`</a>
+                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-743722bca4b7" target="_blank">apteka24.ua`</a>
                   </li>
                 </ul>
               </div>
