--- a/communal.html
+++ b/communal.html
@@ -246,7 +246,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm footer-col">
-            <div class="kolobok"><a class="btn btn-primary btn-sm" href="https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf" title="Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)" role="button" target="_blank">Поддержать сайт</a></div>
+            <div class="kolobok"><a class="btn btn-primary btn-sm" href="https://docs.google.com/document/d/15VLtvFvXNxhkXU_ZH74387e289Rx6If2Zmrp4m8KFAc" title="Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)" role="button" target="_blank">Поддержать сайт</a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
