--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртел.СЧЕТ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
+                    <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ/ТАРИФЫ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
