--- a/communal.html
+++ b/communal.html
@@ -146,10 +146,7 @@
                 <div class="group-title"><span class="badge badge-success">Интернет-кабельний</span></div>
                 <ul>
                   <li>
-                    <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">ТАРИФЫ</span>
-                  </li>
-                  <li>
-                    <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
+                    <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ/ТАРИФЫ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
