--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
+            <div class="kolobok"><a href="https://t.me/zakladki_top" target="_blank">Беседка</a> / <a href="https://t.me/zakladki_top" target="_blank">Задать вопрос</a></div>
           </div>
         </div>
       </div>
