--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <div class="icon online aval ua"></div><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span>
                   </li>
                   <li>
-                    <div class="icon payoneer com"></div><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интерн.кошелек</span>
+                    <div class="icon payoneer com"></div><a href="https://www.payoneer.com/" target="_blank">payoneer</a><span class="opisi">Интерн.кошелек</span>
                   </li>
                   <li>
                     <div class="icon payeer com"></div><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интерн.кошелек</span>
@@ -446,10 +446,6 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-12-01</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon CryptoTab"></div><a href="https://cryptotabbrowser.com/17032365" target="_blank">CryptoTab`</a>
-                    <div class="icontooinfo a0repa3" title="Это браузер для работы и паралельного майнинга биткоинов. Вы в интернете, и Вам понемногу капает Bitcoin" alt=""></div>
-                  </li>
-                  <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb" target="_blank">Карта-колір COVID UA</a>
                     <div class="icontooinfo a0repa3" title="Візуалізація епідемічних показників на рівні районів та міст обласного значення" alt=""></div>
                   </li>
@@ -492,10 +488,6 @@
                   <li>
                     <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-7abce57c019e" target="_blank">prego.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon sneakerstudio com ua"></div><a href="https://letyshops.com/r/sneakerstudio-ua-4qh7st9ddq0ww8" target="_blank">sneakerstudio.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ZAKLADOK</a>
@@ -578,7 +570,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="https://t.me/zakladki_top" target="_blank">Беседка</a> / <a href="https://t.me/zakladki_top" target="_blank">Задать вопрос</a></div>
+            <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
           </div>
         </div>
       </div>
