--- a/index.html
+++ b/index.html
@@ -326,38 +326,38 @@
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">Все дешевле</span>
                   </li>
                   <li>
-                    <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-ww-8e0f7c701af4" target="_blank">best.aliexpress.com`</a>
+                    <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-ww-288bce24ac9a" target="_blank">best.aliexpress.com`</a>
                   </li>
                   <li>
-                    <div class="icon rozetka com ua"></div><a href="https://rozetka.com.ua/" target="_blank">rozetka.com.ua</a>
+                    <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-1bf2104efe2d" target="_blank">rozetka.com.ua`</a>
                   </li>
                   <li>
-                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-19dd22ceba8e" target="_blank">stylus.ua`</a>
+                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-fdff83d9e607" target="_blank">allo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-d1993e48a6a0" target="_blank">skidka.ua`</a>
+                    <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-98af1fd3453d" target="_blank">moyo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-4c9901a4771b" target="_blank">moyo.ua`</a>
+                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-20dc1c96e7c7" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
-                    <div class="icon f ua"></div><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-260ad56e26ee" target="_blank">f.ua`</a>
+                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-38859dfd47b9" target="_blank">skidka.ua`</a>
                   </li>
                   <li>
-                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-f78863faf441" target="_blank">allo.ua`</a>
+                    <div class="icon f ua"></div><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-eacd5b66c959" target="_blank">f.ua`</a>
                   </li>
                   <li>
-                    <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-f1f231622461" target="_blank">xiaomi.ua`</a>
+                    <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-d11562e6217b" target="_blank">xiaomi.ua`</a>
                   </li>
                   <li>
-                    <div class="icon intertop ua"></div><a href="https://letyshops.com/r/intertop-ua-cc02944317d1" target="_blank">intertop.ua`</a>
+                    <div class="icon intertop ua"></div><a href="https://letyshops.com/r/intertop-ua-d4e3bd859cbf" target="_blank">intertop.ua`</a>
                   </li>
                   <li>
-                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4ae19f26a235" target="_blank">med-magazin.ua`</a>
+                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-db16742e5c0c" target="_blank">med-magazin.ua`</a>
                     <div class="icontooinfo a0repa3" title="Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-743722bca4b7" target="_blank">apteka24.ua`</a>
+                    <div class="icon apteka24 ua"></div><a href="https://www.apteka24.ua/" target="_blank">apteka24.ua</a>
                   </li>
                 </ul>
               </div>
@@ -443,7 +443,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-12-01</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2022-01-05</span></a></div>
                 <ul>
                   <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb" target="_blank">Карта-колір COVID UA</a>
@@ -462,32 +462,12 @@
                     <div class="icontooinfo a0repa3" title="Вся статистика по коронавирусу, по всей земле" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
-                    <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
-                  </li>
-                  <li>
                     <div class="icon silvergames"></div><a href="https://www.silvergames.com/ru/" target="_blank">silvergames.com</a>
                     <div class="icontooinfo a0repa7" title="Играть В Классные Бесплатные Онлайн Игры На Silvergames.com" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon avto pro"></div><a href="https://avto.pro/" target="_blank">avto.pro</a>
-                    <div class="icontooinfo a0repa7" title="Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках." alt=""></div>
-                  </li>
-                  <li>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновка.MP3.UA+ZAP</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon notino com"></div><a href="https://letyshops.com/r/notino-ua-4qh7st9ddssg0c" target="_blank">notino.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві." alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon krauff com"></div><a href="https://letyshops.com/r/krauff-ua-4qh7st9dcqask8" target="_blank">krauff.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества." alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-7abce57c019e" target="_blank">prego.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ZAKLADOK</a>
