--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
                   <li>
                     <div class="google icon"></div><a href="https://www.google.com.ua/" target="_blank">Поиск Google</a>
                   </li>
-                  <li>
-                    <div class="yandex icon"></div><a href="https://yandex.ua/" target="_blank">Поиск Yandex</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
-                  </li>
+                  <!--li
+                  div.yandex.icon
+                  a(href='https://yandex.ua/', target='_blank') Поиск Yandex
+                  div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+                  -->
                   <li>
                     <div class="icon translate google com ua"></div><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a>
                   </li>
