--- a/index.html
+++ b/index.html
@@ -102,13 +102,21 @@
                     <div class="icon facebook com"></div><a href="https://www.facebook.com/" target="_blank">Facebook.com</a>
                   </li>
                   <li>
-                    <div class="icon vk com"></div><a href="https://vk.com/" target="_blank">ВКонтакте</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icon instagram com"></div><a href="https://www.instagram.com/" target="_blank">Instagram.com</a>
                   </li>
                   <li>
-                    <div class="icon ok ru"></div><a href="https://ok.ru/" target="_blank">Однокласники</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icon twitter com"></div><a href="https://twitter.com/" target="_blank">Twitter.com</a>
                   </li>
+                  <!--li
+                  div.icon.vk.com
+                  a(href='https://vk.com/', target='_blank') ВКонтакте
+                  div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+                  -->
+                  <!--li
+                  div.icon.ok.ru
+                  a(href='https://ok.ru/', target='_blank') Однокласники
+                  div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+                  -->
                   <li>
                     <div class="icon gmail"></div><a href="https://mail.google.com" target="_blank">почта_gmail</a>
                   </li>
