--- a/index.html
+++ b/index.html
@@ -452,19 +452,15 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2022-01-05</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2022-03-15</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb" target="_blank">Карта-колір COVID UA</a>
-                    <div class="icontooinfo a0repa3" title="Візуалізація епідемічних показників на рівні районів та міст обласного значення" alt=""></div>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&amp;ll=49.44530853384404%2C32.06195504902167&amp;z=7" target="_blank">Карта бойових дій в Україні</a>
+                    <div class="icontooinfo a0repa3" title="Візуалізація, - онлайн карта бойових дій в Україні" alt=""></div>
                   </li>
                   <li>
                     <div class="icon repka ua"></div><a href="https://letyshops.com/r/repka-ua-7352c7232593" target="_blank">repka.ua`</a>
                     <div class="icontooinfo a0repa3" title="Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0" target="_blank">Карта коронавируса UA</a>
-                    <div class="icontooinfo a0repa3" title="Карта Украины с позначками где были зафиксированные случаи" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://covid19.who.int/" target="_blank">Карта коронавируса MIR</a>
