--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2022-03-15</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&amp;ll=49.44530853384404%2C32.06195504902167&amp;z=7" target="_blank">Карта бойових дій в Україні</a>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&amp;ll=49.44530853384404%2C32.06195504902167&amp;z=7" target="_blank">Карта війни в Україні</a>
                     <div class="icontooinfo a0repa3" title="Візуалізація, - онлайн карта бойових дій в Україні" alt=""></div>
                   </li>
                   <li>
