--- a/index.html
+++ b/index.html
@@ -452,10 +452,14 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2022-03-15</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2022-03-30</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&amp;ll=49.44530853384404%2C32.06195504902167&amp;z=7" target="_blank">Карта війни в Україні</a>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://war.ukrzen.in.ua/alerts/" target="_blank">Карта повітряних тривог</a>
+                    <div class="icontooinfo a0repa3" title="Візуалізація, - онлайн карта повітряних тривог в Україні" alt="">       </div>
+                  </li>
+                  <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://liveuamap.com/" target="_blank">Карта війни в Україні</a>
                     <div class="icontooinfo a0repa3" title="Візуалізація, - онлайн карта бойових дій в Україні" alt=""></div>
                   </li>
                   <li>
@@ -514,7 +518,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top" target="_blank" title="Telegram: ЧАТ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
+            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top_one" target="_blank" title="Telegram: КАНАЛ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
